--- a/css/egyMassage.css
+++ b/css/egyMassage.css
@@ -694,7 +694,7 @@ ul {
 @media(max-width:767px) {
 .about-section ul h5{
     margin-top: -10px;
-	margin-left: 50px;
+    margin-left: 50px
 }
     }
     .patrick {
